--- a/style.css
+++ b/style.css
@@ -127,3 +127,11 @@ button:hover{
 li {
   margin: 3px 0;
 }
+
+@media (max-width:750px){
+  #card, #bottom-right-section, #bottom-left-section{
+    width : 100%;
+    height: auto;
+    
+  }
+}
